fix: align itens on lateral menu

--- a/app/view/css/global.css
+++ b/app/view/css/global.css
@@ -378,7 +378,7 @@ a:hover {
   }
 
   .mobile-margin-menu {
-    margin-top: 5em;
+    margin-top: 6rem;
   }
 
   .menu-expand {
