--- a/app/view/css/menu_lateral.css
+++ b/app/view/css/menu_lateral.css
@@ -58,3 +58,9 @@
   height: 50px;
   background-color: #fff;
 }
+
+.align-menu-icons {
+  margin-left: 1rem;
+  padding-left: 2.5rem;
+  padding-right: 2rem;
+}
